# ReMo-CV

./: .gitignore  CMakeLists.txt  FindZBar.cmake  calib.cpp  correct.cpp  cv.cpp  cv.hpp
cpp/: .gitignore  CMakeLists.txt  calib.cpp  correct.cpp  cv.cpp  params.conf
java/hu.bme.mit.inf.remocv/: .gitignore  .project  build.gradle  settings.gradle
java/hu.bme.mit.inf.remocv/src/main/java/hu/bme/mit/inf/remocv/: Exam.xtend  Program.xtend
java/hu.bme.mit.inf.remocv/src/main/xtend-gen/hu/bme/mit/inf/remocv/: .Exam.java._trace  .Exam.xtendbin  .Program.java._trace  .Program.xtendbin  Exam.java  Program.java
latex/: Makefile  main.fdb_latexmk  main.fls  main.tex
latex/inc/: checkbox.sty
